simplestat renamed to transformer; +cosine fillna
cosine is now using preliminary fillna with mean

--- a/6.2022/research.ipynb
+++ b/6.2022/research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,57 +32,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:06<00:00,  2.48it/s, avg. score=1.85]\n",
-      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 395.40it/s]\n"
+      "100%|██████████| 15/15 [13:22<00:00, 53.49s/it, avg. score=0.555]\n",
+      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 476.17it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final validation score: 1.20748441637958\n",
-      "Overall final score: 0.15525455267720448\n"
+      "Final validation score: 0.8783267769946155\n",
+      "Overall final score: 0.10180127772818637\n",
+      "CPU times: user 1h 25min, sys: 2min 2s, total: 1h 27min 3s\n",
+      "Wall time: 13min 24s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1, num_leaves=29)),\n",
-    "    aux.Step(aux.simplestat, aux.subcol[1] + aux.subcol[3], imputer=SimpleImputer(strategy='mean')),\n",
+    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "    aux.Step(aux.transformer, 'all', imputer=SimpleImputer()),\n",
     ").run(valid, validate_on=valid_true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 431.70it/s]\n"
+      "100%|██████████| 15/15 [12:57<00:00, 51.86s/it, avg. score=0.555]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final validation score: 1.2221578718548276\n",
-      "Overall final score: 0.15871013212957305\n"
+      "Using `cosine_stats()` is deprecated! It may take a VERY long time on large data, work unstable or don't work at all.\n",
+      "87877 rows in 1758 chunks\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1758/1758 [07:41<00:00,  3.81it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some values are NaN. Try decrease threshold.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 461.12it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.8806708728036292\n",
+      "Overall final score: 0.10207657602880504\n",
+      "CPU times: user 1h 40min 55s, sys: 10min 55s, total: 1h 51min 51s\n",
+      "Wall time: 20min 48s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.simplestat, 'all', imputer=SimpleImputer(strategy='mean')),\n",
+    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "    aux.Step(aux.cosine_stats, aux.subcol[1], threshold=0.7, subsample=0.05, backend='threading', seed=17),\n",
+    "    aux.Step(aux.transformer, 'all', imputer=SimpleImputer()),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "    aux.Step(aux.cosine_stats, aux.subcol[1], threshold=0.7, subsample=0.15, backend='threading', seed=17),\n",
+    "    aux.Step(aux.transformer, 'all', imputer=SimpleImputer()),\n",
     ").run(valid, validate_on=valid_true)"
    ]
   },
@@ -114,6 +165,35 @@
     "# predicted = aux.ImputeHelper(\n",
     "#     aux.Step(aux.cosine_stats, aux.subcol[1] + aux.subcol[2], threshold=0.7, backend='loky', chunksize=50, subsample=.0001),\n",
     "# ).run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted.isna().any().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aux.save_submission(predicted)"
    ]
   },
   {
