--- a/6.2022/submit.ipynb
+++ b/6.2022/submit.ipynb
@@ -15,14 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [53:26<00:00, 213.79s/it, avg. score=0.444]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kaggle 0.91069\n",
+    "%%time\n",
+    "# Kaggle 0.88964\n",
     "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "    aux.Step(aux.simplestat, aux.subcol[1] + aux.subcol[3], imputer=SimpleImputer(strategy='mean')),\n",
+    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5000, num_leaves=29)),\n",
+    "    aux.Step(aux.transformer, aux.subcol[1] + aux.subcol[3], imputer=SimpleImputer(strategy='mean')),\n",
     ").run(aux.data)"
    ]
   },
@@ -90,7 +99,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Still contain NaN: False\n"
+      "Data contain NaN: False\n",
+      "Data contain inf: False\n"
      ]
     },
     {
@@ -122,27 +132,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0-F_1_14</td>\n",
-       "      <td>-0.127023</td>\n",
+       "      <td>-0.000905</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0-F_3_23</td>\n",
-       "      <td>0.182696</td>\n",
+       "      <td>0.000365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1-F_3_24</td>\n",
-       "      <td>0.177949</td>\n",
+       "      <td>-0.000817</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2-F_1_2</td>\n",
-       "      <td>0.174252</td>\n",
+       "      <td>0.000551</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2-F_4_2</td>\n",
-       "      <td>0.232231</td>\n",
+       "      <td>0.233380</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -150,11 +160,11 @@
       ],
       "text/plain": [
        "    row-col     value\n",
-       "0  0-F_1_14 -0.127023\n",
-       "1  0-F_3_23  0.182696\n",
-       "2  1-F_3_24  0.177949\n",
-       "3   2-F_1_2  0.174252\n",
-       "4   2-F_4_2  0.232231"
+       "0  0-F_1_14 -0.000905\n",
+       "1  0-F_3_23  0.000365\n",
+       "2  1-F_3_24 -0.000817\n",
+       "3   2-F_1_2  0.000551\n",
+       "4   2-F_4_2  0.233380"
       ]
      },
      "execution_count": 3,
