--- a/6.2022/subresearch/subset_3.ipynb
+++ b/6.2022/subresearch/subset_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.simplestat, aux.subcol[sn], imputer=SimpleImputer()),\n",
+    "    aux.Step(aux.transformer, aux.subcol[sn], imputer=SimpleImputer()),\n",
     ").run(valid, validate_on=valid_true)"
    ]
   },
