--- a/6.2022/subresearch/subset_4.ipynb
+++ b/6.2022/subresearch/subset_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +37,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 457.24it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 1.9085581040001287\n",
+      "Overall final score: 0.1824617746726912\n"
+     ]
+    }
+   ],
    "source": [
     "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.simplestat, aux.subcol[sn], imputer=SimpleImputer()),\n",
+    "    aux.Step(aux.transformer, aux.subcol[sn], imputer=SimpleImputer()),\n",
     ").run(valid, validate_on=valid_true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 460.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 1.9087085139675106\n",
+      "Overall final score: 0.18248992329459227\n"
+     ]
+    }
+   ],
    "source": [
     "predicted = aux.ImputeHelper(\n",
     "    aux.Step(aux.groupstat, aux.subcol[2] + aux.subcol[sn], gcol=['F_2_10']),\n",
@@ -66,12 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 10/15 [08:59<05:14, 62.87s/it, avg. score=0.618]"
+     ]
+    }
+   ],
    "source": [
     "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[sn], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=200, num_leaves=29)),\n",
+    "    aux.Step(aux.predictor, aux.subcol[sn], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
     ").run(valid, validate_on=valid_true)"
    ]
   },
@@ -169,12 +209,72 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 / 5: 100%|██████████| 15/15 [00:08<00:00,  1.78it/s, avg. score=0.993]\n",
+      "Epoch 2 / 5: 100%|██████████| 15/15 [00:07<00:00,  1.89it/s, avg. score=0.686]\n",
+      "Epoch 3 / 5: 100%|██████████| 15/15 [00:08<00:00,  1.84it/s, avg. score=0.669]\n",
+      "Epoch 4 / 5: 100%|██████████| 15/15 [00:08<00:00,  1.84it/s, avg. score=0.668]\n",
+      "Epoch 5 / 5: 100%|██████████| 15/15 [00:08<00:00,  1.70it/s, avg. score=0.669]\n",
+      "Epoch 1 / 5: 0it [00:00, ?it/s]\n",
+      "Epoch 2 / 5: 0it [00:00, ?it/s]\n",
+      "Epoch 3 / 5: 0it [00:00, ?it/s]\n",
+      "Epoch 4 / 5: 0it [00:00, ?it/s]\n",
+      "Epoch 5 / 5: 0it [00:00, ?it/s]\n",
+      "Epoch 1 / 5: 0it [00:00, ?it/s]\n",
+      "Epoch 2 / 5: 0it [00:00, ?it/s]\n",
+      "Epoch 3 / 5: 0it [00:00, ?it/s]\n",
+      "Epoch 4 / 5: 0it [00:00, ?it/s]\n",
+      "Epoch 5 / 5: 0it [00:00, ?it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 451.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.9322867447162698\n",
+      "Overall final score: 0.0864203314210984\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.mice, aux.subcol[sn], estimator=SGDRegressor(max_iter=1000), epochs=5, seed=11, autosplit=False, max_fill_nan_count=1),\n",
+    "    aux.Step(aux.mice, aux.subcol[sn], estimator=SGDRegressor(max_iter=1000), epochs=5, seed=11, autosplit=False, max_fill_nan_count=1),\n",
+    "    aux.Step(aux.mice, aux.subcol[sn], estimator=SGDRegressor(max_iter=1000), epochs=5, seed=11, autosplit=False, max_fill_nan_count=1),\n",
+    "    aux.Step(aux.predictor, aux.subcol[sn], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=200, num_leaves=29)),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "# 0.9054178709836844 / 0.444"
    ]
   }
  ],
